[PE] Correct drag image offset with positioned child

DraggedNodeImageBuilder::CreateImage calculates the size and paint offset for
drag images. After [1], the paint offset was the position of the dragged
layout object in the enclosing layer's space. This was incorrect because a
positioned descendant of the dragged object is painted in the drag image so
the paint offset needs to be adjusted to the top-left of the bounding box of
all content in the drag image (in the enclosing layer's space). This is easy
to compute because we already have the bounding box in the enclosing layer's
space, so this patch just uses the bounding box's location.

[1] http://crrev.com/d0ad64d33c [formerly 16b3d20c33]

Bug: 820114
Change-Id: Idc634b3ddc79d0a47003362463b0c3d58f6f516c
Reviewed-on: https://chromium-review.googlesource.com/996376
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548189}
Former-commit-id: a323d69d16f705f9137f074ec50ee188684c9821